--- a/package.json
+++ b/package.json
@@ -1,74 +1,33 @@
 {
-  "name": "tmi.js",
-  "version": "1.5.0",
-  "description": "Javascript library for the Twitch Messaging Interface.",
-  "keywords": [
-    "tmi",
-    "twitch",
-    "twitch.tv",
-    "stream",
-    "broadcast",
-    "message",
-    "messaging",
-    "interface",
-    "subscriber",
-    "websocket",
-    "ws",
-    "bot",
-    "robot"
+  "_from": "tmi.js-proxy",
+  "_id": "tmi.js-proxy@1.5.0",
+  "_inBundle": false,
+  "_integrity": "sha512-8a+xM3YyvI0d+CCF27rnVU1K4bbLTnW4aAnxcoxEwttXUhXsQvSEKus5EkCvrd+nPGm3KUIXZC163dzqEMH7EQ==",
+  "_location": "/tmi.js-proxy",
+  "_phantomChildren": {
+    "agent-base": "6.0.2",
+    "debug": "4.3.1"
+  },
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "tmi.js-proxy",
+    "name": "tmi.js-proxy",
+    "escapedName": "tmi.js-proxy",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
   ],
-  "main": "index.js",
-  "files": [
-    "lib",
-    "index.js",
-    "LICENSE"
-  ],
-  "engines": {
-    "node": ">=7.10.1"
-  },
-  "author": "Schmoopiie",
-  "contributors": [
-    {
-      "name": "celluj34",
-      "email": "celluj34@gmail.com"
-    }
-  ],
-  "scripts": {
-    "test": "istanbul cover node_modules/mocha/bin/_mocha -- --require should --exit",
-    "build": "npm-run-all --sequential build:*",
-    "build:rimraf": "rimraf ./build",
-    "build:mkdirp": "mkdirp ./build",
-    "build:dedupe": "npm dedupe",
-    "build:browserify": "browserify index.js -o ./build/tmi.js",
-    "build:uglify": "uglifyjs --compress --mangle --output ./build/tmi.min.js --source-map ./build/tmi.js.map ./build/tmi.js",
-    "build:sri": "node sri.js ./build/tmi.js",
-    "build:sri-min": "node sri.js ./build/tmi.min.js"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/tmijs/tmi.js.git"
-  },
-  "bugs": {
-    "url": "https://github.com/tmijs/tmi.js/issues"
-  },
-  "dependencies": {
-    "request": "2.88.0",
-    "url": "^0.11.0",
-    "ws": "6.1.3"
-  },
-  "devDependencies": {
-    "babel-preset-es2015": "6.6.0",
-    "babelify": "7.2.0",
-    "browserify": "13.0.0",
-    "hook-std": "0.2.0",
-    "istanbul": "0.4.5",
-    "mkdirp": "0.5.1",
-    "mocha": "5.2.0",
-    "npm-run-all": "1.7.0",
-    "rimraf": "2.5.2",
-    "should": "7.0.4",
-    "uglify-js": "2.6.2"
+  "_resolved": "https://registry.npmjs.org/tmi.js-proxy/-/tmi.js-proxy-1.5.0.tgz",
+  "_shasum": "a4ff61e1c01493979f3144744ef6e177db0005ff",
+  "_spec": "tmi.js-proxy",
+  "_where": "C:\\Users\\xddd\\Desktop\\diabo",
+  "author": {
+    "name": "Schmoopiie"
   },
   "browser": {
     "ws": false,
@@ -85,5 +44,79 @@
         }
       ]
     ]
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/tmijs/tmi.js/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "celluj34",
+      "email": "celluj34@gmail.com"
+    }
+  ],
+  "dependencies": {
+    "https-proxy-agent": "^5.0.0",
+    "request": "2.88.0",
+    "url": "^0.11.0",
+    "ws": "6.1.3"
+  },
+  "deprecated": false,
+  "description": "Javascript library for the Twitch Messaging Interface.",
+  "devDependencies": {
+    "babel-preset-es2015": "6.6.0",
+    "babelify": "7.2.0",
+    "browserify": "13.0.0",
+    "hook-std": "0.2.0",
+    "istanbul": "0.4.5",
+    "mkdirp": "0.5.1",
+    "mocha": "5.2.0",
+    "npm-run-all": "1.7.0",
+    "rimraf": "2.5.2",
+    "should": "7.0.4",
+    "uglify-js": "2.6.2"
+  },
+  "engines": {
+    "node": ">=7.10.1"
+  },
+  "files": [
+    "lib",
+    "index.js",
+    "LICENSE"
+  ],
+  "homepage": "https://github.com/tmijs/tmi.js#readme",
+  "keywords": [
+    "tmi",
+    "twitch",
+    "twitch.tv",
+    "stream",
+    "broadcast",
+    "message",
+    "messaging",
+    "interface",
+    "subscriber",
+    "websocket",
+    "ws",
+    "bot",
+    "robot"
+  ],
+  "license": "MIT",
+  "main": "index.js",
+  "name": "tmi.js-proxy",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tmijs/tmi.js.git"
+  },
+  "scripts": {
+    "build": "npm-run-all --sequential build:*",
+    "build:browserify": "browserify index.js -o ./build/tmi.js",
+    "build:dedupe": "npm dedupe",
+    "build:mkdirp": "mkdirp ./build",
+    "build:rimraf": "rimraf ./build",
+    "build:sri": "node sri.js ./build/tmi.js",
+    "build:sri-min": "node sri.js ./build/tmi.min.js",
+    "build:uglify": "uglifyjs --compress --mangle --output ./build/tmi.min.js --source-map ./build/tmi.js.map ./build/tmi.js",
+    "test": "istanbul cover node_modules/mocha/bin/_mocha -- --require should --exit"
+  },
+  "version": "1.5.0"
 }
